Changes in Release 2.6.2
=============================================
[JOST-223] - Misspelled error constant in SAML 1 StatusCode interface
[JOST-224] - Superfluous/wrong type constants in SAML 1 and SAML 2 interfaces

Changes in Release 2.6.1
=============================================
[JOST-210] - AbstractSAMLObject should not override equals but not hashCode
[JOST-213] - Scoping class has incorrect xsi:type 
[JOST-215] - Opensaml1 failed to pass veracode due Use of Wrong Operator in String Comparison (CWE ID 597) 
[JOST-218] - AbstractMetadataProvider is incorrectly performing an unnecessary validity check and erroneous TRACE message
[JOST-219] - AbstractReloadingMetadataProvider refresh() is public, should be synchronized for concurrent access
[JOST-220] - IdP stopping metadata retrieval

Also, updating POM to implement:
[JXT-106] - Update Apache Santuario (xmlsec) to 1.5.6

Changes in Release 2.6.0
=============================================
[JOST-135] - Opensaml prunes empty xml namespaces, that are required for correct encryption 
[JOST-162] - Globally enabling schema validation breaks the Signature metadata filter 
[JOST-169] - Update Velocity Dependency
[JOST-183] - AbstractReloadingMetadataProvider code for maxRefreshDelay doesn't match documentation
[JOST-184] - It would be nice if ESAPI.encodeForURL could be made to work
[JOST-185] - Defaultbootstrap does not initialize the providers from the WS-Trust and WS-Policy schemas in openws
[JOST-187] - Velocity initialization code uses an invalid key for the configuration properties set
[JOST-188] - DefaultBootstrap is unnecessarily calling Velocity singleton initialization
[JOST-190] - Backport some bugfixes from OpenSAML3
[JOST-191] - Merge back misc XACML fixes from OpenSAML3
[JOST-192] - org.opensaml.saml2.metadata.provider.SignatureValidationFilter => java.lang.UnsupportedOperationException